feat thumb: 增加 Redis 缓存支持
- 在 application-local.yml 中添加 Redis 配置
- 在 BlogServiceImpl 中集成 RedisTemplate，实现博客列表和点赞状态的缓存
- 新增 RedisConfig 配置类，设置 RedisTemplate 序列化方式
- 新增 RedisKeyUtil 工具类，用于生成 Redis key
- 新增 ThumbConstant 接口，定义缓存 key 前缀
- 在 ThumbService 中添加 isThumb 方法，判断用户是否点赞- 在 ThumbServiceImpl 中实现 isThumb 方法，并在点赞操作中同步更新 Redis 缓存
- 在 UserService 中添加 getUserMapByIds 方法，批量获取用户信息
- 在 UserServiceImpl 中实现 getUserMapByIds 方法